The wp-caption shortcode was not responsive due to the fixed widths added. Adding max-width to fix overlapping columns.

--- a/wp-content/themes/makeblog/less/make/style.less
+++ b/wp-content/themes/makeblog/less/make/style.less
@@ -1560,6 +1560,7 @@ img#wpstats {
 }
 
 .wp-caption {
+	max-width: 100%;
 	.wp-caption-text {
 		background-color: #ddd;
 		font-size: 16px;
